--- a/main.css
+++ b/main.css
@@ -1,3 +1,23 @@
 body{
     background-color: lightgray;
 }
+
+.cyrus {
+background-color: aqua;
+}
+.cyrus h3{
+font-size: 22px;
+color:yellow;
+}
+.cyrus h4{
+    font-size: 16;
+    color:blueviolet;
+}
+.cyrus ul{
+    font-size: 14;
+    background-color: red;
+}
+.cyrus{
+    border: 4px solid black;
+    width: 425px;
+}
