--- a/main.css
+++ b/main.css
@@ -1,8 +1,6 @@
 body{
     background-color: lightgray;
 }
-
-
 .cyrus {
 background-color: aqua;
 }
@@ -21,7 +19,7 @@ color:yellow;
 .cyrus{
     border: 4px solid black;
     width: 425px;
-
+}
 .Ethan{
     float: left;
     position: relative;
@@ -31,7 +29,6 @@ color:yellow;
     border-radius: 0.3em;
     
 }
-
 .Hayden{
     color:lime;
     background-color: black;
