added blue background to Ethan class

--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ color:yellow;
     margin: 0 .5em 2.0em 0.5em;
     padding: 1.0em;
     border-radius: 0.3em;
-    
+    background-color:royalblue;
 }
 .Hayden{
     color:lime;
